[tool.poetry]
name = "power_decos"
version = "0.1.2"
description = "A python package full of different decorator utils"
authors = ["MrCode200 <navidyaghmaei@gmail.com>"]
readme = "README.md"
homepage = "https://mrcode200.github.io/power_decos/"
repository = "https://github.com/MrCode200/power_decos"
license = "MIT"
keywords = ["decorators", "log", "retry", "get_time", "cache"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.3.2"
addopts = "-v"
testpaths = ["tests"]

[project.optional-dependencies]
docs = ["sphinx"]


