[tool.poetry]
name = "power_decos"
version = "0.1.5"
description = "A python package full of different decorator utils"
authors = ["MrCode200 <navidyaghmaei@gmail.com>"]
readme = "README.md"
homepage = "https://mrcode200.github.io/power_decos/"
repository = "https://github.com/MrCode200/power_decos"
license = "MIT"
keywords = ["decorators", "log", "retry", "get_time", "cache"]

[tool.poetry.dependencies]
python = "^3.11"
platformdirs = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.3.2"
addopts = "-v --cov=power_decos --cov-report=term-missing"
testpaths = ["tests"]
